--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,5 @@
 <%= form_tag "/users", :method => "post" do %>
   <input type="text" name="name" placeholder="Name">
   <input type="text" name="email" placeholder="Email">
-  <input type"submit" value="Add User">
+  <input type="submit" value="Add User">
 <% end %>
