--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Users</h1>
 <ul>
   <% @users.all.each do |user| %>
-    <li><%= user.name %>
+    <li><a href="users/<%= user.id %>"><%= user.name %></a>
       <ul>
         <li><%= user.email %></li>
+        <li><a href="/users/<%= user.id %>" data-method="delete" data-confirm="Are you sure?">[delete this user]</a></li>
       </ul>
     </li>
   <% end %>
