--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,6 @@
 <p><%= @user.email %></p>
 <ul>
   <li>
-    <a href="<%= edit_user_path(@user.id) %>">[edit this user]</a>
-    <a href="<%= user_path(@user.id) %>" data-method="delete" data-confirm="Are you sure?">[delete this user]</a>
+    [<a href="<%= edit_user_path(@user.id) %>">edit this user</a>]
+    [<a href="<%= user_path(@user.id) %>" data-method="delete" data-confirm="Are you sure?">delete this user</a>]
   </li>
