--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,11 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<header>
+  <% if !session[:user_id].nil? %>
+    <%= @user.email %>
+  <% end %>
+</header>
 <body>
 
 <%= yield %>
