--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @user.name %></h1>
-<p><%= @user.email %></p>
 <ul>
   <li>
     [<a href="<%= edit_user_path(@user.id) %>">edit this user</a>]
     [<a href="<%= user_path(@user.id) %>" data-method="delete" data-confirm="Are you sure?">delete this user</a>]
+    [<a href="<%= logout_path %>">log out</a>]
   </li>
