--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,14 @@
-<h1><%= @user.name %></h1>
+<h1><%= @users.name %></h1>
+<ul>
+  <% @tasks.each do |task| %>
+    <li><%= task.name %></li>
+  <% end %>
+    <li><p>[<a href="/tasks/new">add task</a>]</p></li>
+</ul>
 <ul>
   <li>
-    [<a href="<%= edit_user_path(@user.id) %>">edit this user</a>]
-    [<a href="<%= user_path(@user.id) %>" data-method="delete" data-confirm="Are you sure?">delete this user</a>]
+    [<a href="<%= edit_user_path(@users.id) %>">edit this user</a>]
+    [<a href="<%= user_path(@users.id) %>" data-method="delete" data-confirm="Are you sure?">delete this user</a>]
     [<a href="<%= logout_path %>">log out</a>]
   </li>
+</ul>
