--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit User</h1>
 
-<%= form_tag user_path(@user.id), :method => "put" do %>
-  <input type="text" name="user[name]" placeholder="<%= @user.name %>" value="<%= @user.name %>">
-  <input type="text" name="user[email]" placeholder="<%= @user.name %>" value="<%= @user.email %>">
+<%= form_tag user_path(@users.id), :method => "put" do %>
+  <input type="text" name="user[name]" placeholder="<%= @users.name %>" value="<%= @users.name %>">
+  <input type="text" name="user[email]" placeholder="<%= @users.name %>" value="<%= @users.email %>">
   <input type="submit" value="Edit User">
 <% end %>
